--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -535,7 +535,6 @@
       <action-widget response="1">button7</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkListStore" id="liststore2"/>
   <object class="GtkImage" id="image12">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -559,6 +558,7 @@
     <signal name="row-changed" handler="on_liststore1_row_changed" swapped="no"/>
     <signal name="row-inserted" handler="on_liststore1_row_changed" swapped="no"/>
   </object>
+  <object class="GtkListStore" id="liststore2"/>
   <object class="MenulibreWindow" id="menulibre_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">MenuLibre</property>
@@ -1994,6 +1994,7 @@
                         <property name="xalign">1</property>
                         <property name="label" translatable="yes">&lt;small&gt;Filename&lt;/small&gt;</property>
                         <property name="use_markup">True</property>
+                        <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
