--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -753,6 +753,9 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="show_arrow">False</property>
+            <style>
+              <class name="primary-toolbar"/>
+            </style>
             <child>
               <object class="GtkToolButton" id="toolbar_addnew">
                 <property name="visible">True</property>
@@ -902,6 +905,9 @@
             <property name="margin_top">6</property>
             <property name="margin_bottom">6</property>
             <property name="layout_style">start</property>
+            <style>
+              <class name="linked"/>
+            </style>
             <child>
               <object class="GtkRadioButton" id="breadcrumb_home">
                 <property name="visible">True</property>
