--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -407,6 +407,14 @@
       <action-widget response="1">iconselection1_confirm</action-widget>
     </action-widgets>
   </object>
+  <object class="GtkListStore" id="liststore4">
+    <columns>
+      <!-- column-name iconselection_pixbuf -->
+      <column type="GdkPixbuf"/>
+      <!-- column-name iconselection_name -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkDialog" id="iconselection_dialog2">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
@@ -504,6 +512,7 @@
                   <object class="GtkTreeView" id="iconselection_treeview">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="model">liststore4</property>
                     <property name="headers_visible">False</property>
                     <property name="headers_clickable">False</property>
                     <property name="rules_hint">True</property>
@@ -511,6 +520,28 @@
                     <property name="show_expanders">False</property>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="treeview-selection2"/>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="iconselection_pixbuf_col">
+                        <property name="title" translatable="yes">Image</property>
+                        <child>
+                          <object class="GtkCellRendererPixbuf" id="iconselection_pixbuf_cell"/>
+                          <attributes>
+                            <attribute name="pixbuf">0</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="iconselection_name_col">
+                        <property name="title" translatable="yes">Name</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="iconselection_name_cell"/>
+                          <attributes>
+                            <attribute name="text">1</attribute>
+                          </attributes>
+                        </child>
+                      </object>
                     </child>
                   </object>
                 </child>
