--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -407,6 +407,7 @@
   <object class="GtkWindow" id="menulibre_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">MenuLibre</property>
+    <property name="icon_name">alacarte</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
