--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -373,8 +373,12 @@
         <child>
           <object class="GtkTreeView" id="treeview1">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can_focus">True</property>
+            <property name="has_focus">True</property>
             <property name="model">liststore1</property>
+            <property name="headers_visible">False</property>
+            <property name="reorderable">True</property>
+            <property name="rules_hint">True</property>
             <child internal-child="selection">
               <object class="GtkTreeSelection" id="treeview-selection1"/>
             </child>
